update AZ-104 certification

--- a/index.html
+++ b/index.html
@@ -228,14 +228,14 @@
                             <img src="https://images.credly.com/size/340x340/images/7e75516f-5149-4d19-8d09-aa3dab4907cb/security-operations-analyst-associate-600x600.png" height="75px">
                             <a href="https://www.credly.com/badges/6ccbe7d4-0436-43a8-a18a-bba508044ced" target = "_blank">Microsoft Certified: Security Operations Analyst Associate</a>
                         </li>
+                        <li>
+                            <img src="https://images.credly.com/size/680x680/images/336eebfc-0ac3-4553-9a67-b402f491f185/azure-administrator-associate-600x600.png" height="75px">
+                            <a href="https://www.credly.com/badges/b221449b-cbf8-49c1-9d49-9da4723d43b9" target = "_blank">Microsoft Certified: Azure Administrator Associate</a>
+                        </li>
                     <!-- Next Associate level items on my list!
                         <li>
                             <span class="fa-li"><i class="fas fa-medal"></i></span>
                             <a href="#" target = "_blank">Microsoft 365 Certified: Security Administrator Associate</a>
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-medal"></i></span>
-                            <a href="#" target = "_blank">Microsoft Certified: Azure Administrator Associate</a>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-medal"></i></span>
@@ -247,12 +247,12 @@
                             <a href="https://www.credly.com/badges/734874f7-edcd-4df9-a022-f6a58fc5166b" target = "_blank">Microsoft Certified: Azure Fundamentals</a>
                         </li>
                         <li>
-                            <img src="https://images.credly.com/size/340x340/images/fc1352af-87fa-4947-ba54-398a0e63322e/security-compliance-and-identity-fundamentals-600x600.png" height="75px">
-                            <a href="https://www.credly.com/badges/1d7f772d-235b-4eb8-8243-440579477138" target = "_blank">Microsoft Certified: Security and Compliance Fundamentals</a>
-                        </li>
-                        <li>
                             <img src="https://images.credly.com/size/340x340/images/70eb1e3f-d4de-4377-a062-b20fb29594ea/azure-data-fundamentals-600x600.png" height="75px">
                             <a href="https://www.credly.com/badges/1e9e1d25-9deb-481f-a719-7a4147e7f3c2/public_url" target = "_blank">Microsoft Certified: Azure Data Fundamentals</a>
+                        </li>
+                        <li>
+                            <img src="https://images.credly.com/size/340x340/images/fc1352af-87fa-4947-ba54-398a0e63322e/security-compliance-and-identity-fundamentals-600x600.png" height="75px">
+                            <a href="https://www.credly.com/badges/1d7f772d-235b-4eb8-8243-440579477138" target = "_blank">Microsoft Certified: Security and Compliance Fundamentals</a>
                         </li>
                         <li>
                             <img src="https://images.credly.com/size/340x340/images/2a6251f2-737b-4bf6-9190-d77570cc76fc/CERT-Fundamentals-Power-Platform.png" height="75px">
@@ -314,7 +314,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Microsoft 365 Systems Engineer Lead</h3>
                             <div class="subheading mb-3"><a href="https://www.blueapache.com/" target = "_blank">blueAPACHE</a> | <a href="https://connectos.co/" target = "_blank">ConnectOS</a></div>
-                            <p>Microsoft 365 Systems Engineer Lead primarily focused on delivering Microsoft 365 services for blueAPACHE clients.</p>
+                            <p>Microsoft 365 Systems Engineer Lead primarily focused on delivering Microsoft 365 services and solutions for blueAPACHE clients.</p>
                             <p>Works alongside Microsoft 365 Services Lead in improving and building internal IPs, templates and scripts to automate and reduce admin overhead in supporting Microsoft 365 tenants. </p>
                             <p>Responsible for technical leadership, consultation, project designs, and escalation for Microsoft 365 space.</p> 
                         </div>
