Update certification links

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                     <ul class="fa-ul mb-0">
                         <li>
                            <img src="https://images.credly.com/size/340x340/images/dfa4cb20-16ed-42ca-90a5-6528b62ee651/microsoft365-enterprise-adminstrator-expert-600x600.png" height="60px">
-                            <a href="https://www.credly.com/badges/2a616bfa-7e50-46ac-90b8-c3b51568b6f4/" target = "_blank">Microsoft 365 Certified: Enterprise Administrator Expert</a>
+                            <a href="https://learn.microsoft.com/api/credentials/share/en-us/janeilagan/69C3922C5AA744F0?sharingId=C27DB6AA0FD96DF5" target = "_blank">Microsoft 365 Certified: Enterprise Administrator Expert</a>
                         </li>
 
                     <!-- Next Expert/Architect level items on my list!
@@ -303,27 +303,27 @@
                      -->
                      <li>
                         <img src="https://images.credly.com/size/340x340/images/59db067c-f0e9-44a8-bcc7-53a960274bfb/CERT-Associate-Microsoft365-Teams-Administrator.png" height="60px">
-                        <a href="https://www.credly.com/badges/e74e1597-9bd6-44c8-941c-94d38276839d" target = "_blank">Microsoft 365 Certified: Teams Administrator Associate</a>
+                        <a href="https://learn.microsoft.com/api/credentials/share/en-us/janeilagan/2B293A486F9E5920?sharingId=C27DB6AA0FD96DF5" target = "_blank">Microsoft 365 Certified: Teams Administrator Associate</a>
                      </li>
                         <li>
                             <img src="https://images.credly.com/size/340x340/images/59db067c-f0e9-44a8-bcc7-53a960274bfb/CERT-Associate-Microsoft365-Teams-Administrator.png" height="60px">
-                            <a href="https://www.credly.com/badges/4991e4ad-d5fd-45ff-b652-a91fc270081f" target = "_blank">Microsoft 365 Certified: Messaging Administrator Associate</a>
+                            <a href="https://learn.microsoft.com/api/credentials/share/en-us/janeilagan/9AA1C9E993102B09?sharingId=C27DB6AA0FD96DF5" target = "_blank">Microsoft 365 Certified: Messaging Administrator Associate</a>
                         </li>
                         <li>
                             <img src="https://images.credly.com/size/340x340/images/91295436-0704-4b98-8e1a-ef5f937bda21/identity-and-access-administrator-associate-600x600.png" height="60px">
-                            <a href="https://www.credly.com/badges/783d6d01-1fc7-40ed-b3f0-a88cfd9fec63/public_url" target = "_blank">Microsoft Certified: Identity and Access Administrator Associate</a>
+                            <a href="https://learn.microsoft.com/api/credentials/share/en-us/janeilagan/9732D3049C35D73A?sharingId=C27DB6AA0FD96DF5" target = "_blank">Microsoft Certified: Identity and Access Administrator Associate</a>
                         </li>
                         <li>
                             <img src="https://images.credly.com/images/c36c96ec-5e83-4a77-868d-aca5e757cb92/information-protection-administrator-associate-600x600.png" height="60px">
-                            <a href="https://learn.microsoft.com/en-us/users/janeilagan/credentials/5494b5256f9dea69" target = "_blank">Microsoft Certified: Information Protection Administrator Associate</a>
+                            <a href="https://learn.microsoft.com/api/credentials/share/en-us/janeilagan/5494B5256F9DEA69?sharingId=C27DB6AA0FD96DF5" target = "_blank">Microsoft Certified: Information Protection Administrator Associate</a>
                         </li>
                         <li>
                             <img src="https://images.credly.com/size/340x340/images/7e75516f-5149-4d19-8d09-aa3dab4907cb/security-operations-analyst-associate-600x600.png" height="60px">
-                            <a href="https://www.credly.com/badges/6ccbe7d4-0436-43a8-a18a-bba508044ced" target = "_blank">Microsoft Certified: Security Operations Analyst Associate</a>
+                            <a href="https://learn.microsoft.com/api/credentials/share/en-us/janeilagan/1B3A8BC2AEAB1B32?sharingId=C27DB6AA0FD96DF5" target = "_blank">Microsoft Certified: Security Operations Analyst Associate</a>
                         </li>
                         <li>
                             <img src="https://images.credly.com/size/680x680/images/336eebfc-0ac3-4553-9a67-b402f491f185/azure-administrator-associate-600x600.png" height="60px">
-                            <a href="https://www.credly.com/badges/b221449b-cbf8-49c1-9d49-9da4723d43b9" target = "_blank">Microsoft Certified: Azure Administrator Associate</a>
+                            <a href="https://learn.microsoft.com/api/credentials/share/en-us/janeilagan/AD6E05078A4B858E?sharingId=C27DB6AA0FD96DF5" target = "_blank">Microsoft Certified: Azure Administrator Associate</a>
                         </li>
                     <!-- Next Associate level items on my list!
                         <li>
@@ -343,19 +343,19 @@
                      
                         <li>
                             <img src="https://images.credly.com/size/340x340/images/be8fcaeb-c769-4858-b567-ffaaa73ce8cf/image.png" height="60px">
-                            <a href="https://www.credly.com/badges/734874f7-edcd-4df9-a022-f6a58fc5166b" target = "_blank">Microsoft Certified: Azure Fundamentals</a>
+                            <a href="https://learn.microsoft.com/api/credentials/share/en-us/janeilagan/6D4101AA12EA2DC2?sharingId=C27DB6AA0FD96DF5" target = "_blank">Microsoft Certified: Azure Fundamentals</a>
                         </li>
                         <li>
                             <img src="https://images.credly.com/size/340x340/images/70eb1e3f-d4de-4377-a062-b20fb29594ea/azure-data-fundamentals-600x600.png" height="60px">
-                            <a href="https://www.credly.com/badges/1e9e1d25-9deb-481f-a719-7a4147e7f3c2/public_url" target = "_blank">Microsoft Certified: Azure Data Fundamentals</a>
+                            <a href="https://learn.microsoft.com/api/credentials/share/en-us/janeilagan/D840410EA87379BF?sharingId=C27DB6AA0FD96DF5" target = "_blank">Microsoft Certified: Azure Data Fundamentals</a>
                         </li>
                         <li>
                             <img src="https://images.credly.com/size/340x340/images/fc1352af-87fa-4947-ba54-398a0e63322e/security-compliance-and-identity-fundamentals-600x600.png" height="60px">
-                            <a href="https://www.credly.com/badges/1d7f772d-235b-4eb8-8243-440579477138" target = "_blank">Microsoft Certified: Security and Compliance Fundamentals</a>
+                            <a href="https://learn.microsoft.com/api/credentials/share/en-us/janeilagan/372103E6E78F776?sharingId=C27DB6AA0FD96DF5" target = "_blank">Microsoft Certified: Security and Compliance Fundamentals</a>
                         </li>
                         <li>
                             <img src="https://images.credly.com/size/340x340/images/2a6251f2-737b-4bf6-9190-d77570cc76fc/CERT-Fundamentals-Power-Platform.png" height="60px">
-                            <a href="https://www.credly.com/badges/0cdb7d3e-5bb7-4136-86f7-54c2bbb2ef11/public_url8" target = "_blank">Microsoft Certified: Power Platform Fundamentals</a>
+                            <a href="https://learn.microsoft.com/api/credentials/share/en-us/janeilagan/FDA5083FD156055?sharingId=C27DB6AA0FD96DF5" target = "_blank">Microsoft Certified: Power Platform Fundamentals</a>
                         </li>
                         
 
