--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/janeilagan/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/janeilagan" target="_blank"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="https://www.credly.com/users/janeilagan" target="_blank"><i class="fa-solid fa-medal"></i></a>
-                      <!--   <a class="social-icon" href="https://app.pluralsight.com/profile/janeilagan" target="_blank"><i class="fa-brands fa-leanpub"></i></a> -->
+                        <a class="social-icon" href="https://digitaljungle.netlify.app/" target="_blank"><i class=" 	fas fa-seedling"></i></a>
+                      <!--  <a class="social-icon" href="https://www.credly.com/users/janeilagan" target="_blank"><i class="fa-solid fa-medal"></i></a>
+                         <a class="social-icon" href="https://app.pluralsight.com/profile/janeilagan" target="_blank"><i class="fa-brands fa-leanpub"></i></a> -->
          
 
                     </div>
@@ -315,7 +316,7 @@
                         </li>
                         <li>
                             <img src="https://images.credly.com/images/c36c96ec-5e83-4a77-868d-aca5e757cb92/information-protection-administrator-associate-600x600.png" height="60px">
-                            <a href="https://learn.microsoft.com/api/credentials/share/en-us/janeilagan/5494B5256F9DEA69?sharingId=C27DB6AA0FD96DF5" target = "_blank">Microsoft Certified: Information Protection Administrator Associate</a>
+                            <a href="https://learn.microsoft.com/api/credentials/share/en-us/janeilagan/5494B5256F9DEA69?sharingId=C27DB6AA0FD96DF5" target = "_blank">Microsoft Certified: Information Protection and Compliance Administrator Associate</a>
                         </li>
                         <li>
                             <img src="https://images.credly.com/size/340x340/images/7e75516f-5149-4d19-8d09-aa3dab4907cb/security-operations-analyst-associate-600x600.png" height="60px">
@@ -495,9 +496,9 @@
       <section class="resume-section" id="connect">
         <div class="resume-section-content">
             <h2 class="mb-5">Connect</h2>
-            <p>If you're interested to know my about detailed work experience, character references or want to chat about cats in general, please don't hesitate to drop me a <a class="social-icon" href="mailto:jane.ilagan@outlook.ph"><i class="far fa-paper-plane"></i></a>
+            <p>If you're interested to know my about detailed work experience, character references or want to chat about cats in general, please don't hesitate to drop me <a class="social-icon" href="mailto:jane.ilagan@outlook.ph"><i class="far fa-paper-plane"></i></a>
             <p class="mb-0"></p>
-           <small><p>Version update: 2023-July-07 09:22AM-PH </p></small>
+           <small><p>Version update: 2023-Aug-24 06:54AM-PH </p></small>
         </div>
     </section>
 
