--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                             <div class="subheading mb-3"><a href="https://www.blueapache.com/" target = "_blank">blueAPACHE</a> | <a href="https://connectos.co/" target = "_blank">ConnectOS</a></div>
                             <p>Microsoft 365 Systems Engineer Lead primarily focused on delivering Microsoft 365 services and cloud solutions for blueAPACHE clients.</p>
                             <p>Works alongside Microsoft 365 Services Lead in improving and building internal IPs, templates and scripts to automate and reduce admin overhead in supporting Microsoft 365 tenants. </p>
-                            <p>Responsible for technical leadership, consultation, project designs, and escalation for Microsoft 365 space.</p> 
+                            <p>Responsible for technical leadership, consultation, project designs, and escalation for Microsoft 365 space. +</p> 
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2022 - Present</span></div>
                     </div>
