update garden link

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/janeilagan/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/janeilagan" target="_blank"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="https://digitaljungle.netlify.app/" target="_blank"><i class=" 	fas fa-seedling"></i></a>
+                        <a class="social-icon" href="https://janeilagan.github.io/digital-jungle/" target="_blank"><i class=" 	fas fa-seedling"></i></a>
                       <!--  <a class="social-icon" href="https://www.credly.com/users/janeilagan" target="_blank"><i class="fa-solid fa-medal"></i></a>
                          <a class="social-icon" href="https://app.pluralsight.com/profile/janeilagan" target="_blank"><i class="fa-brands fa-leanpub"></i></a> -->
          
@@ -481,7 +481,7 @@
             <div class="resume-section-content">
                 <h2 class="mb-5">Hobbies</h2>
                 <p>I love diving into the world of technology, and I make it a point to spend a few hours each week exploring the latest tech trends that pique my interest.</p>
-                <p>Sometimes, I procrastinate studying by getting lost in the rabbit hole of building my <a href="https://digitaljungle.netlify.app/" target="_blank">digital jungle </a> using <a href="https://obsidian.md/" target="_blank">Obsidian</a> and <a href="https://www.notion.so/" target="_blank">Notion</a>.</p>
+                <p>Sometimes, I procrastinate studying by getting lost in the rabbit hole of building my <a href="https://janeilagan.github.io/digital-jungle/" target="_blank">digital jungle </a> using <a href="https://obsidian.md/" target="_blank">Obsidian</a> and <a href="https://www.notion.so/" target="_blank">Notion</a>.</p>
                 <p>If my partner permits, I also get into the habit of overspending on home automation even though we obviously don't need it.</p>
                 <p>Aside from being a techy, I spend my free time playing with my rescue cats. Their names are <a href="assets/img/fish.jpeg" onpointerenter="showImage(this)" onpointerleave="hideImage(this)">Fish<img class="img-preview" src="assets/img/fish.jpg"></a>, <a href="assets/img/shrimp.jpg" onpointerenter="showImage(this)" onpointerleave="hideImage(this)">Shrimp<img class="img-preview" src="assets/img/shrimp.jpg"></a>, <a href="assets/img/shark.jpg" onpointerenter="showImage(this)" onpointerleave="hideImage(this)">Shark<img class="img-preview" src="assets/img/shark.jpg"></a>, and <a href="assets/img/stingray.jpg" onpointerenter="showImage(this)" onpointerleave="hideImage(this)">Stingray<img class="img-preview" src="assets/img/stingray.jpg"></a>.</p>
                 <p>It's like having a little <a href="assets/img/aquarium.jpg" onpointerenter="showImage(this)" onpointerleave="hideImage(this)">cat aquarium<img class="img-preview" src="assets/img/aquarium.jpg"></a> at home!</p>
