--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                     <ul class="fa-ul mb-0">
                         <li>
                            <img src="https://images.credly.com/size/340x340/images/dfa4cb20-16ed-42ca-90a5-6528b62ee651/microsoft365-enterprise-adminstrator-expert-600x600.png" height="60px">
-                            <a href="https://learn.microsoft.com/api/credentials/share/en-us/janeilagan/69C3922C5AA744F0?sharingId=C27DB6AA0FD96DF5" target = "_blank">Microsoft 365 Certified: Enterprise Administrator Expert</a>
+                            <a href="https://learn.microsoft.com/api/credentials/share/en-us/janeilagan/69C3922C5AA744F0?sharingId=C27DB6AA0FD96DF5" target = "_blank">Microsoft 365 Certified: Administrator Expert</a>
                         </li>
 
                     <!-- Next Expert/Architect level items on my list!
