--- a/index.html
+++ b/index.html
@@ -297,11 +297,12 @@
                              <img src="https://th.bing.com/th/id/OIP.jT10meTNnPZ3ABf3KEXXfwAAAA?pid=ImgDet&rs=1" height="75px">
                             <a href="#" target = "_blank">Microsoft Certified: Cybersecurity Architect Expert</a>
                         </li>
-                        <li>
-                             <img src="https://th.bing.com/th/id/OIP.PpcCU1WMQQsv4NGnzvqPPQAAAA?pid=ImgDet&rs=1g" height="75px">
-                            <a href="#" target = "_blank">Microsoft Certified: Azure Solutions Architect Expert</a>
-                        </li>
                      -->
+                        <li>
+                             <img src="https://th.bing.com/th/id/OIP.PpcCU1WMQQsv4NGnzvqPPQAAAA?pid=ImgDet&rs=1g" height="60px">
+                            <a href="https://learn.microsoft.com/api/credentials/share/en-us/janeilagan/7BC9F735CA7A21FE?sharingId=C27DB6AA0FD96DF5" target = "_blank">Microsoft Certified: Azure Solutions Architect Expert</a>
+                        </li>
+                    
                      <li>
                         <img src="https://images.credly.com/size/340x340/images/59db067c-f0e9-44a8-bcc7-53a960274bfb/CERT-Associate-Microsoft365-Teams-Administrator.png" height="60px">
                         <a href="https://learn.microsoft.com/api/credentials/share/en-us/janeilagan/2B293A486F9E5920?sharingId=C27DB6AA0FD96DF5" target = "_blank">Microsoft 365 Certified: Teams Administrator Associate</a>
