linkedin link update

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         I'm a passionate IT professional with an extensive eight-year track record in the field, specializing in technical leadership, system design, administration, and engineering.
                     </p>
                     <div class="social-icons">
-                        <a class="social-icon" href="https://www.linkedin.com/in/janeilagan/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/jane-ilagan/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/janeilagan" target="_blank"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://janeilagan.github.io/digital-jungle/" target="_blank"><i class=" 	fas fa-seedling"></i></a>
                       <!--  <a class="social-icon" href="https://www.credly.com/users/janeilagan" target="_blank"><i class="fa-solid fa-medal"></i></a>
